--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 					    data-shipping="0" 
 					    data-tax="0" 
 					    data-locale="pt_BR"
-					    data-callback="http://ajudeagaby.com.br/paypal" 
-					    data-env="sandbox"
+					    data-callback="http://www.ajudeagaby.com.br/paypal"
 					></script>
 			</div>
 			<div class="col-md-4">
