--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<div class="col-md-4">
 				<h4>PayPal</h4>
 					
-					<script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=ajydaparagaby@gmail.com" 
+					<script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=ajudaparagaby@gmail.com" 
 					    data-button="donate" 
 					    data-name="Ajude a Gaby"
 					    data-currency="BRL" 
